# resistance_coup

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  coup.py  main.py  pyproject.toml
src/: utils.py
src/handler/: game_handler.py
src/models/: action.py  card.py  player.py
src/models/players/: ai.py  base.py  human.py
src/utils/: game_state.py  print.py  table.py
