[tool.poetry]
name = "coup"
version = "0.1.0"
description = "A CLI version of the popular game, The Resistance: Coup"
authors = ["Dirk Brand <dirkbrnd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.2"
names = "^0.3.0"
rich-click = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
